--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,10 @@ body {
   box-shadow: 0px 5px 7px rgb(27, 27, 27);
 }
 
+h1{
+  text-align: center;
+}
+
 .todo-input {
   display: flex;
   align-items: center;
@@ -130,11 +134,39 @@ body {
   color: rgb(53, 221, 143);
 }
 
-@media screen and (max-width: 600px) {
+.copyright {
+  width: 100%;
+  text-align: center;
+  padding: 5px 0;
+  background: #262626;
+  font-weight: 300;
+  margin-top: 20px;
+  position: fixed;
+  bottom: 0;
+}
+
+.copyright p {
+  margin: 8px;
+}
+
+.copyright p a{
+  text-decoration: none;
+  color: #fff;
+}
+
+
+@media only screen and (max-width: 600px){
   body {
     background-color: lavender;
     color: white;
     overflow: hidden;
+  }
+
+  .copyright{
+    font-size: 14px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
   }
   
 }
